--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "h2-elements",
+  "name": "isuwang-elements",
   "version": "0.7.9",
   "description": "Polymer components for building web apps.",
   "keywords": [
     "polymer",
     "element",
-    "h2-element"
+    "isuwang-element"
   ],
   "repository": {
     "type": "git",
@@ -18,10 +18,6 @@
     "supports-color": "3.1.2",
     "type-detect": "1.0.0"
   },
-  "contributors": [
-    "WahsonLeung  <hsliang1@163.com>",
-    "XuZepeng <xuzepeng912@163.com>"
-  ],
   "license": "MIT",
   "scripts": {
     "start": "polymer serve",
