--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-dialog-behavior": "^3.0.1",
     "@polymer/paper-input": "^3.0.0",
+    "@polymer/paper-radio-button": "^3.0.1",
     "@polymer/paper-tooltip": "^3.0.1",
     "@polymer/polymer": "^3.1.0",
     "async-validator": "^3.2.4",
+    "babel-polyfill": "^6.26.0",
     "lodash-es": "^4.17.11",
     "web-animations-js": "^2.3.1"
   },
