--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-dialog-behavior": "^3.0.1",
     "@polymer/paper-input": "^3.0.0",
+    "@polymer/paper-tabs": "^3.1.0",
     "@polymer/paper-tooltip": "^3.0.1",
     "@polymer/polymer": "^3.1.0",
     "async-validator": "^3.2.4",
