--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/wanbo-chain/isu-elements.git"
+    "url": "https://github.com/isuwang-2019/isu-elements.git"
   },
-  "homepage": "https://github.com/wanbo-chain/isu-elements",
+  "homepage": "https://github.com/isuwang-2019/isu-elements",
   "resolutions": {
     "inherits": "2.0.3",
     "samsam": "1.1.3",
