--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/isuwang-2019/isu-elements.git"
+    "url": "https://github.com/isuwang-2019/isuwang-element.git"
   },
-  "homepage": "https://github.com/isuwang-2019/isu-elements",
+  "homepage": "https://github.com/isuwang-2019/isuwang-element.git",
   "resolutions": {
     "inherits": "2.0.3",
     "samsam": "1.1.3",
@@ -42,9 +42,8 @@
     "@polymer/paper-checkbox": "^3.0.0",
     "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-dialog-behavior": "^3.0.1",
-    "@polymer/paper-input": "^3.0.0",
-    "@polymer/paper-tabs": "^3.1.0",
     "@polymer/paper-input": "^3.2.1",
+    "@polymer/paper-tabs": "^3.1.0",
     "@polymer/paper-radio-button": "^3.0.1",
     "@polymer/paper-tooltip": "^3.0.1",
     "@polymer/polymer": "^3.3.1",
