--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "isuwang-elements",
+  "name": "isu-element",
   "version": "1.0.0",
   "description": "Polymer components for building web apps.",
-  "keywords": [
-    "polymer",
-    "element",
-    "isuwang-element"
-  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/isuwang-2019/isuwang-element.git"
+    "url": "git+https://github.com/isuwang-2019/isu-element.git"
   },
-  "homepage": "https://github.com/isuwang-2019/isuwang-element.git",
+  "keywords": [
+    "polymer",
+    "polymer3",
+    "element",
+    "isu-element"
+  ],
+  "author": "jiezaizone、nh0007、0762xiazi、wuliya1994、WahsonLeung",
+  "bugs": {
+    "url": "https://github.com/isuwang-2019/isu-element/issues"
+  },
+  "homepage": "https://github.com/isuwang-2019/isu-element#readme",
   "resolutions": {
     "inherits": "2.0.3",
     "samsam": "1.1.3",
     "supports-color": "3.1.2",
     "type-detect": "1.0.0"
   },
+  "contributors": [
+    "jiezaizone  <jiezaizone@163.com>",
+    "nh0007 <nh0828007@gmail.com>",
+    "0762xiazi <909338280@qq.com>",
+    "wuliya1994 <18702883708@163.com>"
+  ],
   "license": "MIT",
   "scripts": {
     "start": "polymer serve",
