--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "isu-element",
+  "name": "isu-elements",
   "version": "1.0.0",
   "description": "Polymer components for building web apps.",
   "repository": {
