--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,10 @@
 {
-  "extends": "eslint:recommended",
-  "ecmaVersion": 6,
+  "extends": [
+    "eslint:recommended",
+    "standard"
+  ],
   "rules": {
+    "no-debugger'":  "off",
     "indent": ["error", 2],
     "no-console": "warn",
     "no-var": "error",
@@ -24,6 +27,7 @@
     }]
   },
   "parserOptions": {
+    "ecmaVersion": 2018,
     "sourceType": "module"
   },
   "env": {
