--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "isu-elements",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Polymer components for building web apps.",
   "repository": {
     "type": "git",
@@ -59,7 +59,6 @@
     "@polymer/paper-tooltip": "^3.0.1",
     "@polymer/polymer": "^3.0.1",
     "babel-polyfill": "^6.26.0",
-    "eslint": "^7.0.0",
     "lodash-es": "^4.17.15",
     "web-animations-js": "^2.3.1"
   },
@@ -67,6 +66,13 @@
     "@polymer/iron-component-page": "^4.0.0",
     "@polymer/iron-demo-helpers": "^3.1.0",
     "@webcomponents/webcomponentsjs": "^2.4.3",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "wct-browser-legacy": "^1.0.1"
   }
 }
