--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "isu-elements",
-  "version": "1.1.54n",
+  "version": "1.1.54",
   "description": "Polymer components for building web apps.",
   "repository": {
     "type": "git",
